use answers api to verify user input

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -27,6 +27,14 @@
     .question_text {
         padding: 20px 0 20px 0
     }
+
+    .fail {
+        color: lightcoral;
+    }
+
+    .success {
+        color: green;
+    }
 </style>
 
 <body>
@@ -42,7 +50,7 @@
             <button onclick="getNextQuestion()">Next</button>
         </div>
 
-        <div id="result" class="check_result"></div>
+        <pre id="result" class="check_result"></pre>
     </div>
 </body>
 
